terraform-infrasructure/application-setup/modules/vpc/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
 
 tags = merge(var.common_tags, {
    Name = "eschool-vpc"
  })

}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

tags = merge(var.common_tags, {
    Name = "eschool-igw"
  })

}

resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.cidr_block
  map_public_ip_on_launch = true
  
  tags = merge(var.common_tags, {
    Name = "eschool-public-subnet"
  })

}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = merge(var.common_tags, {
    Name = "eschool-public-rt"
  })

}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}
